[TD-290] List.of로 변경