@@ -2,7 +2,6 @@ package com.depromeet.threedollar.common.study;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -13,7 +12,7 @@ class ListSubListTest {
     void subList_3부터_3까지_자르면_빈_리스트가_반환된다() {
         // given
         int size = 3;
-        List<String> stringList = Arrays.asList("A", "B", "C");
+        List<String> stringList = List.of("A", "B", "C");
 
         // when
         List<String> front = stringList.subList(0, size);
@@ -28,7 +27,7 @@ class ListSubListTest {
     void subList_SIZE_이상인경우_SIZE와나머지로_자른다() {
         // given
         int size = 3;
-        List<String> stringList = Arrays.asList("A", "B", "C", "D", "E");
+        List<String> stringList = List.of("A", "B", "C", "D", "E");
 
         // when
         List<String> front = stringList.subList(0, size);
